--- a/index.html/index.html
+++ b/index.html/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
         <h3 class=" nav-title">Ma<span class="text-p">r</span>y</h3>
         <ul>
@@ -16,6 +16,16 @@
             <li><button class="b-primary"> Hire Me </button></li>
         </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-contant">
+                <h3 class="banner-gr">Hi I am </h3>
+                <h1 class="banner-title">Naeem Hossain</h1>
+                <p>shot what able cold new see hold friendly as an betrayed formerly he. Morning beacuse as to society behave moments</p>
+                <button class="b-primary">Download CV</button>
+                <button class="b-primary">Contact</button>
+            </div>
+            <img class="portfolio-photo" src="style/ca.png" alt="">
+        </div>
     </header>
     <main>
 
